# flyout-lite

./: .env.example  Cargo.toml  LICENSE  README.md  README.tr.md  app.rc  build.rs
src/: app.rs  config.rs  flyout.rs  hotkey.rs  main.rs  media.rs  render.rs  settings_window.rs  startup.rs  tray.rs  util.rs
