[package]
name = "flyout-lite"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "flyout-lite"
path = "src/main.rs"

[dependencies]
windows-numerics = "0.2"

[dependencies.windows]
version = "0.61"
features = [
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",
    "Media_Control",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_WinRT",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Imaging_D2D",
    "Win32_Graphics_Dwm",
]

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
